新增服务脚本